--- a/aneka.html
+++ b/aneka.html
@@ -1,3 +1,4 @@
 <h1> Welcome to Aneka Warna By Ssa </h1>
-<p>Batik Pekalongan</p>
+<p>Batik <b>Pekalongan</b></p>
 <a href="https://www.instagram.com/anekawarna.byssa/" target="_blank" title="Instagram page"> Here is my page!</a>
+<img src="img/batik.jpeg">
