--- a/aneka.html
+++ b/aneka.html
@@ -1,4 +1,17 @@
-<h1> Welcome to Aneka Warna By Ssa </h1>
-<p>Batik <b>Pekalongan</b></p>
-<a href="https://www.instagram.com/anekawarna.byssa/" target="_blank" title="Instagram page"> Here is my page!</a>
-<img src="img/batik.jpeg">
+<meta charset="utf-8">
+	<title> aneka warna batik </title>
+	<style type="text/css">
+		h1{font-size: 30px; color: salmon;}
+		h2{color: darkred;
+			font-size: 20px;
+		}
+
+		.big{
+			font-size: 60px;
+		}
+		.uppercase{text-transform: uppercase;}
+		h1 span 
+		{color: black;}
+		
+	</style>
+	
